[gd_scene load_steps=3 format=3 uid="uid://dhi4ut5yr4d8r"]

[ext_resource type="Script" path="res://games/settings.gd" id="1_squju"]
[ext_resource type="AudioStream" uid="uid://do831soc0hl7e" path="res://assets/bgm/Main Menu BGM.wav" id="2_f207q"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_squju")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VolumeLabel2" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -156.0
offset_right = 116.5
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="VolumeLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Volume Slider"

[node name="BackButton" type="Button" parent="CanvasLayer"]
offset_left = 8.0
offset_top = 8.0
offset_right = 165.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_f207q")
autoplay = true
bus = &"BGM"

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
